Fix UI backend URL for Render deployment

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+uploads/IMG_0328.jpeg
+uploads/IMG_1392.jpeg
+uploads/IMG_3002.PNG
+uploads/IMG_3004.PNG
+uploads/IMG_2722.jpeg
